---------------------------------------------------------------------------------------------------
Version: 1.11.0
Date: ???

  Changes:
    - reduce drone spawns, adjusted other units spawn
    - adjusted max_count_of_owned_units to be max_friends_around_to_spawn+2

---------------------------------------------------------------------------------------------------
Version: 1.10.0
Date: 2021-09-03

  Changes:
    - changed Overlord drop range from 12 to 3
    - changed Overlord drop cooldown from 10-5s to 15-10s
    - Replaced queen healing effect to zerg's slow-down effect
    - Lurker now attacks with 2 AOE radius, max damage changed from 100 - 75
    - Mutalisk attack speed range changed from 2.5s - 1.25s to 2s - 1s
    - Ultralisk now deal 1 attack per second on max level from 1 attack every 0.75 second.
    - Defiler changed from 40 - 80 to 20 - 80
    - Guardian +33% damage, 1 attack per second.
    - bump zergling health
    - bump infested health
    - Add infested to tier 3 unit in race_setting

  Graphics:
    - Fix render layer for corpses

---------------------------------------------------------------------------------------------------
Version: 1.9.1
Date: 2021-08-02

  Changes:
    - Change hydralisk attack sound


---------------------------------------------------------------------------------------------------
Version: 1.9.0
Date: 2021-07-28

  Changes:
    - Add compatibility for attack meter
    - Change map bounding box on building, 1 tile for all side
    - Moved mutalisk to tier 2. It starts to spawn at evolution 0.2, instead of 0.0
    - added lurker to tier 2 in race setting. It was never there. O.o
    - Movement Speed change
    - change AOE's force = "not-same"

---------------------------------------------------------------------------------------------------
Version: 1.8.0
Date: 2021-07-11

  Graphics:
    - Reduced the black border width on all unit and buildings.
    - Added black filler pngs to fill the holes on buildings.
