@@ -51,7 +51,7 @@ local attack_range = 9
 
 local movement_multiplier = settings.startup["enemyracemanager-level-multipliers"].value
 local base_movement_speed = 0.2
-local incremental_movement_speed = 0.1
+local incremental_movement_speed = 0.15
 
 -- Misc Settings
 local vision_distance = 35
@@ -105,6 +105,7 @@ function ErmZerg.make_devourer(level)
                 type = "stream",
                 ammo_category = 'biological',
                 range = attack_range,
+                min_attack_distance = attack_range - 3,
                 cooldown = ERM_UnitHelper.get_attack_speed(base_attack_speed, incremental_attack_speed, attack_speed_multiplier, level),
                 cooldown_deviation = 0.1,
                 ammo_type = {
