@@ -5,6 +5,8 @@ Date: ???
   Changes:
     - reduce drone spawns, adjusted other units spawn
     - adjusted max_count_of_owned_units to be max_friends_around_to_spawn+2
+    - Minor increase on flyer speed.
+    - added min_attack_range to units
 
 ---------------------------------------------------------------------------------------------------
 Version: 1.10.0
